--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,35 @@
+:root {
+    --header: 150px;
+    --footer: 50px;
+    --main: calc(100vh - calc(var(--header) + var(--footer)));
+}
+
 body {
     margin: 0px;
-    background-color: #fffbeb;
+    background-color: #d97706;
 }
 
 header {
     display: grid;
-    height: 150px;
+    height: var(--header);
     grid-template-rows: 100px 50px;
     min-width: 200px;
     position: sticky;
     top: 0;
-    box-shadow: 1px 0px 1px black;
+    z-index: 10;
+    box-shadow: 1px 0px 10px #00000075;
+    background-color: #fffbeb;
 }
 
 nav {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    border-top: 2px solid;
 }
 
 button {
-    background-color: #d97706;
-    border: 1px solid #78350f;
+    background-color: #f8fafc;
+    border: none;
 }
 
 button:hover {
@@ -28,7 +37,15 @@ button:hover {
 }
 
 footer {
-    text-align: center;
+    height: var(--footer);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content : center;
+    background-color: #fffbeb;
+    box-shadow: 1px 0px 10px #00000075;
+    position: fixed;
+    bottom: 0;
 }
 
 .logo-wrapper {
@@ -39,50 +56,116 @@ footer {
 
 .logo {
     cursor: pointer;
-    width: 64px;
-    height: 64px;
+    width: 4rem;
+    height: 4rem;
 }
 
 
 .container {
+    position: relative;
     overflow: scroll;
-}
-
-.container > * {
-    border: 1px solid;
+    height: var(--main);
 }
 
 .featured {
-    height: 700px;
+    height: max(var(--main), min-content);
     display: flex;
     justify-content: center;
-    gap: 150px;
+    flex-wrap: wrap;
+    box-shadow: 1px 0px 10px #00000075;
+    position: relative;
+    overflow: scroll;
 }
 
 .featured>* {
-    margin-top: 150px;
+    margin: 3rem;
+    margin-top: min(10vh, 150px);
+    border-radius: 1rem;
+    border: 2px solid #fde68a;
+    background-color: #fffbeb;
 }
 
 .featured-photo {
-    background-color: red;
-    width: 600px;
-    height: 400px;
+    width: min(100vw, 600px);
+    height: min(80vh, 400px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.featured-photo > img {
+    width: 90%;
+    height: 90%;
+    border: 1px solid #fde68a;
+    border-radius: 1rem;
 }
 
 .featured-info {
-    background-color: red;
-    width: 500px;
-    height: 300px;
+    width: min(100vw, 500px);
+    height: min(80vh, 300px);
+    display: flex;
+    flex-direction: column;
+}
+
+.featured-info > * {
+    padding: 1rem;
+    margin: 0px;
+}
+
+.featured-info > p {
+    font-size: 1.5rem;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    line-clamp: 6;
 }
 
 .testimonial {
     height: 500px;
+    display: flex;
+    align-items: center;
+    background-color: #fde68a;
 }
 
 .quote-banner {
-
+    height: 60%;
+    width: 100%;
+    background-color: #fffbeb;
+    box-shadow: 1px 0px 10px #00000075;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.gallery {
-    height: 600px;
+p {
+    margin: 0px;
+}
+
+.quote-box {
+    height: 200px;
+    width: min(90%, 700px);
+    font-size: 2rem;
+    overflow: hidden;
+}
+
+.quote {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    line-clamp: 5;
+}
+
+.author {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.author-box {
+    width: min(90%, 700px);
+    text-align: right;
 }
